// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Story Snapshots > AllSizes 1`] = `
<div>
  <div
    class="flex w-full flex-row justify-between gap-6"
  >
    <form
      class="grow min-w-60"
      data-form-is-valid="true"
      data-testid=""
    >
      <div
        class="flex flex-col gap-4"
      >
        <div
          class="place-content-center"
        >
          <label
            class="group relative max-w-fit inline-flex items-center justify-start cursor-pointer touch-none tap-highlight-transparent select-none"
            data-invalid="false"
            data-required="false"
            data-testid="smallswitch"
          >
            <input
              aria-labelledby="«r8»"
              class="font-inherit text-[100%] leading-[1.15] m-0 p-0 overflow-visible box-border absolute top-0 w-full h-full opacity-[0.0001] z-[1] cursor-pointer disabled:cursor-default"
              data-react-aria-pressable="true"
              name="smallSwitch"
              role="switch"
              tabindex="0"
              type="checkbox"
              value=""
            />
            <span
              aria-hidden="true"
              class="px-1 relative inline-flex items-center justify-start shrink-0 overflow-hidden bg-default-200 rounded-full outline-solid outline-transparent group-data-[focus-visible=true]:z-10 group-data-[focus-visible=true]:ring-2 group-data-[focus-visible=true]:ring-focus group-data-[focus-visible=true]:ring-offset-2 group-data-[focus-visible=true]:ring-offset-background group-data-[selected=true]:bg-primary group-data-[selected=true]:text-primary-foreground w-10 h-6 transition-background"
            >
              <span
                class="z-10 flex items-center justify-center bg-white shadow-small rounded-full origin-right pointer-events-none w-4 h-4 text-tiny group-data-[selected=true]:ms-4 transition-all group-data-[pressed=true]:w-5 group-data-[selected]:group-data-[pressed]:ml-3"
              />
            </span>
            <span
              class="relative select-none ms-2 text-foreground group-data-[invalid=true]:!text-danger group-data-[required=true]:after:text-danger text-sm subpixel-antialiased group-data-[required=true]:after:ml-0.5 group-data-[required=true]:after:content-["*"]"
              id="«r8»"
            >
              🐭 Microservices
            </span>
          </label>
        </div>
        <div
          class="place-content-center"
        >
          <label
            class="group relative max-w-fit inline-flex items-center justify-start cursor-pointer touch-none tap-highlight-transparent select-none"
            data-invalid="false"
            data-required="false"
            data-testid="mediumswitch"
          >
            <input
              aria-labelledby="«r9»"
              class="font-inherit text-[100%] leading-[1.15] m-0 p-0 overflow-visible box-border absolute top-0 w-full h-full opacity-[0.0001] z-[1] cursor-pointer disabled:cursor-default"
              data-react-aria-pressable="true"
              name="mediumSwitch"
              role="switch"
              tabindex="0"
              type="checkbox"
              value=""
            />
            <span
              aria-hidden="true"
              class="px-1 relative inline-flex items-center justify-start shrink-0 overflow-hidden bg-default-200 rounded-full outline-solid outline-transparent group-data-[focus-visible=true]:z-10 group-data-[focus-visible=true]:ring-2 group-data-[focus-visible=true]:ring-focus group-data-[focus-visible=true]:ring-offset-2 group-data-[focus-visible=true]:ring-offset-background group-data-[selected=true]:bg-primary group-data-[selected=true]:text-primary-foreground w-12 h-7 transition-background"
            >
              <span
                class="z-10 flex items-center justify-center bg-white shadow-small rounded-full origin-right pointer-events-none w-5 h-5 text-small group-data-[selected=true]:ms-5 transition-all group-data-[pressed=true]:w-6 group-data-[selected]:group-data-[pressed]:ml-4"
              />
            </span>
            <span
              class="relative select-none ms-2 text-foreground group-data-[invalid=true]:!text-danger group-data-[required=true]:after:text-danger text-sm subpixel-antialiased group-data-[required=true]:after:ml-0.5 group-data-[required=true]:after:content-["*"]"
              id="«r9»"
            >
              🏗️ Monolith
            </span>
          </label>
        </div>
        <div
          class="place-content-center"
        >
          <label
            class="group relative max-w-fit inline-flex items-center justify-start cursor-pointer touch-none tap-highlight-transparent select-none"
            data-invalid="false"
            data-required="false"
            data-testid="largeswitch"
          >
            <input
              aria-labelledby="«ra»"
              class="font-inherit text-[100%] leading-[1.15] m-0 p-0 overflow-visible box-border absolute top-0 w-full h-full opacity-[0.0001] z-[1] cursor-pointer disabled:cursor-default"
              data-react-aria-pressable="true"
              name="largeSwitch"
              role="switch"
              tabindex="0"
              type="checkbox"
              value=""
            />
            <span
              aria-hidden="true"
              class="px-1 relative inline-flex items-center justify-start shrink-0 overflow-hidden bg-default-200 rounded-full outline-solid outline-transparent group-data-[focus-visible=true]:z-10 group-data-[focus-visible=true]:ring-2 group-data-[focus-visible=true]:ring-focus group-data-[focus-visible=true]:ring-offset-2 group-data-[focus-visible=true]:ring-offset-background group-data-[selected=true]:bg-primary group-data-[selected=true]:text-primary-foreground w-14 h-8 transition-background"
            >
              <span
                class="z-10 flex items-center justify-center bg-white shadow-small rounded-full origin-right pointer-events-none w-6 h-6 text-medium group-data-[selected=true]:ms-6 transition-all group-data-[pressed=true]:w-7 group-data-[selected]:group-data-[pressed]:ml-5"
              />
            </span>
            <span
              class="relative select-none ms-2 text-foreground group-data-[invalid=true]:!text-danger group-data-[required=true]:after:text-danger text-sm subpixel-antialiased group-data-[required=true]:after:ml-0.5 group-data-[required=true]:after:content-["*"]"
              id="«ra»"
            >
              🏢 Enterprise Monolith
            </span>
          </label>
        </div>
      </div>
      <div
        class="mt-4 flex justify-end"
      >
        <button
          aria-label="Submit form"
          class="group tap-highlight-transparent data-[hover=true]:opacity-hover z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-success data-[hover=true]:opacity-hover text-white"
          data-react-aria-pressable="true"
          data-testid="form_submit_button"
          tabindex="0"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Story Snapshots > Default 1`] = `
<div>
  <div
    class="flex w-full flex-row justify-between gap-6"
  >
    <form
      class="grow min-w-60"
      data-form-is-valid="true"
      data-testid=""
    >
      <div
        class="place-content-center"
      >
        <label
          class="group relative max-w-fit inline-flex items-center justify-start cursor-pointer touch-none tap-highlight-transparent select-none"
          data-invalid="false"
          data-required="false"
          data-testid="switchfield"
        >
          <input
            aria-labelledby="«r0»"
            class="font-inherit text-[100%] leading-[1.15] m-0 p-0 overflow-visible box-border absolute top-0 w-full h-full opacity-[0.0001] z-[1] cursor-pointer disabled:cursor-default"
            data-react-aria-pressable="true"
            name="switchField"
            role="switch"
            tabindex="0"
            type="checkbox"
            value=""
          />
          <span
            aria-hidden="true"
            class="px-1 relative inline-flex items-center justify-start shrink-0 overflow-hidden bg-default-200 rounded-full outline-solid outline-transparent group-data-[focus-visible=true]:z-10 group-data-[focus-visible=true]:ring-2 group-data-[focus-visible=true]:ring-focus group-data-[focus-visible=true]:ring-offset-2 group-data-[focus-visible=true]:ring-offset-background group-data-[selected=true]:bg-primary group-data-[selected=true]:text-primary-foreground w-12 h-7 transition-background"
          >
            <span
              class="z-10 flex items-center justify-center bg-white shadow-small rounded-full origin-right pointer-events-none w-5 h-5 text-small group-data-[selected=true]:ms-5 transition-all group-data-[pressed=true]:w-6 group-data-[selected]:group-data-[pressed]:ml-4"
            />
          </span>
          <span
            class="relative select-none ms-2 text-foreground group-data-[invalid=true]:!text-danger group-data-[required=true]:after:text-danger text-sm subpixel-antialiased group-data-[required=true]:after:ml-0.5 group-data-[required=true]:after:content-["*"]"
            id="«r0»"
          >
            🐛 Enable bugs in production
          </span>
        </label>
      </div>
      <div
        class="mt-4 flex justify-end"
      >
        <button
          aria-label="Submit form"
          class="group tap-highlight-transparent data-[hover=true]:opacity-hover z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-success data-[hover=true]:opacity-hover text-white"
          data-react-aria-pressable="true"
          data-testid="form_submit_button"
          tabindex="0"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Story Snapshots > Disabled 1`] = `
<div>
  <div
    class="flex w-full flex-row justify-between gap-6"
  >
    <form
      class="grow min-w-60"
      data-form-is-valid="true"
      data-testid=""
    >
      <div
        class="place-content-center"
      >
        <label
          class="group relative max-w-fit inline-flex items-center justify-start cursor-pointer touch-none tap-highlight-transparent select-none opacity-disabled pointer-events-none"
          data-disabled="true"
          data-invalid="false"
          data-required="false"
          data-testid="switchfield"
        >
          <input
            aria-labelledby="«r2»"
            class="font-inherit text-[100%] leading-[1.15] m-0 p-0 overflow-visible box-border absolute top-0 w-full h-full opacity-[0.0001] z-[1] cursor-pointer disabled:cursor-default"
            data-react-aria-pressable="true"
            disabled=""
            name="switchField"
            role="switch"
            type="checkbox"
            value=""
          />
          <span
            aria-hidden="true"
            class="px-1 relative inline-flex items-center justify-start shrink-0 overflow-hidden bg-default-200 rounded-full outline-solid outline-transparent group-data-[focus-visible=true]:z-10 group-data-[focus-visible=true]:ring-2 group-data-[focus-visible=true]:ring-focus group-data-[focus-visible=true]:ring-offset-2 group-data-[focus-visible=true]:ring-offset-background group-data-[selected=true]:bg-primary group-data-[selected=true]:text-primary-foreground w-12 h-7 transition-background"
          >
            <span
              class="z-10 flex items-center justify-center bg-white shadow-small rounded-full origin-right pointer-events-none w-5 h-5 text-small group-data-[selected=true]:ms-5 transition-all group-data-[pressed=true]:w-6 group-data-[selected]:group-data-[pressed]:ml-4"
            />
          </span>
          <span
            class="relative select-none ms-2 text-foreground group-data-[invalid=true]:!text-danger group-data-[required=true]:after:text-danger text-sm subpixel-antialiased group-data-[required=true]:after:ml-0.5 group-data-[required=true]:after:content-["*"]"
            id="«r2»"
          >
            📚 Read documentation first
          </span>
        </label>
      </div>
      <div
        class="mt-4 flex justify-end"
      >
        <button
          aria-label="Submit form"
          class="group tap-highlight-transparent data-[hover=true]:opacity-hover z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-success data-[hover=true]:opacity-hover text-white"
          data-react-aria-pressable="true"
          data-testid="form_submit_button"
          tabindex="0"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Story Snapshots > Invalid 1`] = `
<div>
  <div
    class="flex w-full flex-row justify-between gap-6"
  >
    <form
      class="grow min-w-60"
      data-form-is-valid="false"
      data-testid=""
    >
      <div
        class="place-content-center"
      >
        <label
          aria-describedby="react-aria-react-useId-mock react-aria-react-useId-mock"
          class="group relative max-w-fit inline-flex items-center justify-start cursor-pointer touch-none tap-highlight-transparent select-none"
          data-focus="true"
          data-hover="true"
          data-invalid="true"
          data-required="true"
          data-selected="true"
          data-testid="switchfield"
          required=""
        >
          <input
            aria-labelledby="«r4»"
            class="font-inherit text-[100%] leading-[1.15] m-0 p-0 overflow-visible box-border absolute top-0 w-full h-full opacity-[0.0001] z-[1] cursor-pointer disabled:cursor-default"
            data-react-aria-pressable="true"
            name="switchField"
            role="switch"
            tabindex="0"
            type="checkbox"
            value="true"
          />
          <span
            aria-hidden="true"
            class="px-1 relative inline-flex items-center justify-start shrink-0 overflow-hidden bg-default-200 rounded-full outline-solid outline-transparent group-data-[focus-visible=true]:z-10 group-data-[focus-visible=true]:ring-2 group-data-[focus-visible=true]:ring-focus group-data-[focus-visible=true]:ring-offset-2 group-data-[focus-visible=true]:ring-offset-background group-data-[selected=true]:bg-primary group-data-[selected=true]:text-primary-foreground w-12 h-7 transition-background"
          >
            <span
              class="z-10 flex items-center justify-center bg-white shadow-small rounded-full origin-right pointer-events-none w-5 h-5 text-small group-data-[selected=true]:ms-5 transition-all group-data-[pressed=true]:w-6 group-data-[selected]:group-data-[pressed]:ml-4"
            />
          </span>
          <span
            class="relative select-none ms-2 text-foreground group-data-[invalid=true]:!text-danger group-data-[required=true]:after:text-danger text-sm subpixel-antialiased group-data-[required=true]:after:ml-0.5 group-data-[required=true]:after:content-["*"]"
            id="«r4»"
          >
            🤡 Use jQuery in 2024
          </span>
        </label>
        <div
          class="mt-1 ml-1"
        >
          <div
            class="text-tiny text-danger"
            data-slot="error-message"
            id="react-aria-react-useId-mock"
          >
            <ul
              aria-label="Validation errors of field switchfield"
              data-testid="switchfield_error"
            >
              <li
                style="overflow: hidden;"
              >
                <div
                  class="px-1 pt-1"
                >
                  Please keep your sanity intact
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
      <div
        class="mt-4 flex justify-end"
      >
        <button
          aria-label="Submit form"
          class="group tap-highlight-transparent data-[hover=true]:opacity-hover z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-success data-[hover=true]:opacity-hover text-white"
          data-react-aria-pressable="true"
          data-testid="form_submit_button"
          tabindex="0"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Story Snapshots > Required 1`] = `
<div>
  <div
    class="flex w-full flex-row justify-between gap-6"
  >
    <form
      class="grow min-w-60"
      data-form-is-valid="false"
      data-testid=""
    >
      <div
        class="place-content-center"
      >
        <label
          class="group relative max-w-fit inline-flex items-center justify-start cursor-pointer touch-none tap-highlight-transparent select-none"
          data-invalid="false"
          data-required="true"
          data-testid="switchfield"
          required=""
        >
          <input
            aria-labelledby="«r3»"
            class="font-inherit text-[100%] leading-[1.15] m-0 p-0 overflow-visible box-border absolute top-0 w-full h-full opacity-[0.0001] z-[1] cursor-pointer disabled:cursor-default"
            data-react-aria-pressable="true"
            name="switchField"
            role="switch"
            tabindex="0"
            type="checkbox"
            value=""
          />
          <span
            aria-hidden="true"
            class="px-1 relative inline-flex items-center justify-start shrink-0 overflow-hidden bg-default-200 rounded-full outline-solid outline-transparent group-data-[focus-visible=true]:z-10 group-data-[focus-visible=true]:ring-2 group-data-[focus-visible=true]:ring-focus group-data-[focus-visible=true]:ring-offset-2 group-data-[focus-visible=true]:ring-offset-background group-data-[selected=true]:bg-primary group-data-[selected=true]:text-primary-foreground w-12 h-7 transition-background"
          >
            <span
              class="z-10 flex items-center justify-center bg-white shadow-small rounded-full origin-right pointer-events-none w-5 h-5 text-small group-data-[selected=true]:ms-5 transition-all group-data-[pressed=true]:w-6 group-data-[selected]:group-data-[pressed]:ml-4"
            />
          </span>
          <span
            class="relative select-none ms-2 text-foreground group-data-[invalid=true]:!text-danger group-data-[required=true]:after:text-danger text-sm subpixel-antialiased group-data-[required=true]:after:ml-0.5 group-data-[required=true]:after:content-["*"]"
            id="«r3»"
          >
            🚀 Deploy on Friday
          </span>
        </label>
      </div>
      <div
        class="mt-4 flex justify-end"
      >
        <button
          aria-label="Submit form"
          class="group tap-highlight-transparent data-[hover=true]:opacity-hover z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-success data-[hover=true]:opacity-hover text-white"
          data-react-aria-pressable="true"
          data-testid="form_submit_button"
          tabindex="0"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Story Snapshots > WithInitialValue 1`] = `
<div>
  <div
    class="flex w-full flex-row justify-between gap-6"
  >
    <form
      class="grow min-w-60"
      data-form-is-valid="true"
      data-testid=""
    >
      <div
        class="place-content-center"
      >
        <label
          class="group relative max-w-fit inline-flex items-center justify-start cursor-pointer touch-none tap-highlight-transparent select-none"
          data-invalid="false"
          data-required="false"
          data-selected="true"
          data-testid="switchfield"
        >
          <input
            aria-labelledby="«r1»"
            checked=""
            class="font-inherit text-[100%] leading-[1.15] m-0 p-0 overflow-visible box-border absolute top-0 w-full h-full opacity-[0.0001] z-[1] cursor-pointer disabled:cursor-default"
            data-react-aria-pressable="true"
            name="switchField"
            role="switch"
            tabindex="0"
            type="checkbox"
            value="true"
          />
          <span
            aria-hidden="true"
            class="px-1 relative inline-flex items-center justify-start shrink-0 overflow-hidden bg-default-200 rounded-full outline-solid outline-transparent group-data-[focus-visible=true]:z-10 group-data-[focus-visible=true]:ring-2 group-data-[focus-visible=true]:ring-focus group-data-[focus-visible=true]:ring-offset-2 group-data-[focus-visible=true]:ring-offset-background group-data-[selected=true]:bg-primary group-data-[selected=true]:text-primary-foreground w-12 h-7 transition-background"
          >
            <span
              class="z-10 flex items-center justify-center bg-white shadow-small rounded-full origin-right pointer-events-none w-5 h-5 text-small group-data-[selected=true]:ms-5 transition-all group-data-[pressed=true]:w-6 group-data-[selected]:group-data-[pressed]:ml-4"
            />
          </span>
          <span
            class="relative select-none ms-2 text-foreground group-data-[invalid=true]:!text-danger group-data-[required=true]:after:text-danger text-sm subpixel-antialiased group-data-[required=true]:after:ml-0.5 group-data-[required=true]:after:content-["*"]"
            id="«r1»"
          >
            ☕ Coffee is a vegetable
          </span>
        </label>
      </div>
      <div
        class="mt-4 flex justify-end"
      >
        <button
          aria-label="Submit form"
          class="group tap-highlight-transparent data-[hover=true]:opacity-hover z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-success data-[hover=true]:opacity-hover text-white"
          data-react-aria-pressable="true"
          data-testid="form_submit_button"
          tabindex="0"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Story Snapshots > WithStartAndEndContent 1`] = `
<div>
  <div
    class="flex w-full flex-row justify-between gap-6"
  >
    <form
      class="grow min-w-60"
      data-form-is-valid="true"
      data-testid=""
    >
      <div
        class="place-content-center"
      >
        <label
          class="group relative max-w-fit inline-flex items-center justify-start cursor-pointer touch-none tap-highlight-transparent select-none"
          data-invalid="false"
          data-required="false"
          data-selected="true"
          data-testid="switchfield"
        >
          <input
            aria-labelledby="«r7»"
            checked=""
            class="font-inherit text-[100%] leading-[1.15] m-0 p-0 overflow-visible box-border absolute top-0 w-full h-full opacity-[0.0001] z-[1] cursor-pointer disabled:cursor-default"
            data-react-aria-pressable="true"
            name="switchField"
            role="switch"
            tabindex="0"
            type="checkbox"
            value="true"
          />
          <span
            aria-hidden="true"
            class="px-1 relative inline-flex items-center justify-start shrink-0 overflow-hidden bg-default-200 rounded-full outline-solid outline-transparent group-data-[focus-visible=true]:z-10 group-data-[focus-visible=true]:ring-2 group-data-[focus-visible=true]:ring-focus group-data-[focus-visible=true]:ring-offset-2 group-data-[focus-visible=true]:ring-offset-background group-data-[selected=true]:bg-primary group-data-[selected=true]:text-primary-foreground w-12 h-7 transition-background"
          >
            <span
              data-testid="icon-FaPhone"
            >
              FaPhone
            </span>
            <span
              class="z-10 flex items-center justify-center bg-white shadow-small rounded-full origin-right pointer-events-none w-5 h-5 text-small group-data-[selected=true]:ms-5 transition-all group-data-[pressed=true]:w-6 group-data-[selected]:group-data-[pressed]:ml-4"
            />
            <span
              data-testid="icon-FaEnvelope"
            >
              FaEnvelope
            </span>
          </span>
          <span
            class="relative select-none ms-2 text-foreground group-data-[invalid=true]:!text-danger group-data-[required=true]:after:text-danger text-sm subpixel-antialiased group-data-[required=true]:after:ml-0.5 group-data-[required=true]:after:content-["*"]"
            id="«r7»"
          >
            📧 Send emails at 3 AM
          </span>
        </label>
      </div>
      <div
        class="mt-4 flex justify-end"
      >
        <button
          aria-label="Submit form"
          class="group tap-highlight-transparent data-[hover=true]:opacity-hover z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-success data-[hover=true]:opacity-hover text-white"
          data-react-aria-pressable="true"
          data-testid="form_submit_button"
          tabindex="0"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Story Snapshots > WithThumbIcon 1`] = `
<div>
  <div
    class="flex w-full flex-row justify-between gap-6"
  >
    <form
      class="grow min-w-60"
      data-form-is-valid="true"
      data-testid=""
    >
      <div
        class="place-content-center"
      >
        <label
          class="group relative max-w-fit inline-flex items-center justify-start cursor-pointer touch-none tap-highlight-transparent select-none"
          data-invalid="false"
          data-required="false"
          data-selected="true"
          data-testid="switchfield"
        >
          <input
            aria-labelledby="«r6»"
            checked=""
            class="font-inherit text-[100%] leading-[1.15] m-0 p-0 overflow-visible box-border absolute top-0 w-full h-full opacity-[0.0001] z-[1] cursor-pointer disabled:cursor-default"
            data-react-aria-pressable="true"
            name="switchField"
            role="switch"
            tabindex="0"
            type="checkbox"
            value="true"
          />
          <span
            aria-hidden="true"
            class="px-1 relative inline-flex items-center justify-start shrink-0 overflow-hidden bg-default-200 rounded-full outline-solid outline-transparent group-data-[focus-visible=true]:z-10 group-data-[focus-visible=true]:ring-2 group-data-[focus-visible=true]:ring-focus group-data-[focus-visible=true]:ring-offset-2 group-data-[focus-visible=true]:ring-offset-background group-data-[selected=true]:bg-primary group-data-[selected=true]:text-primary-foreground w-12 h-7 transition-background"
          >
            <span
              class="z-10 flex items-center justify-center bg-white shadow-small rounded-full origin-right pointer-events-none w-5 h-5 text-small group-data-[selected=true]:ms-5 transition-all group-data-[pressed=true]:w-6 group-data-[selected]:group-data-[pressed]:ml-4"
            >
              <span
                data-testid="icon-FaRocket"
              >
                FaRocket
              </span>
            </span>
          </span>
          <span
            class="relative select-none ms-2 text-foreground group-data-[invalid=true]:!text-danger group-data-[required=true]:after:text-danger text-sm subpixel-antialiased group-data-[required=true]:after:ml-0.5 group-data-[required=true]:after:content-["*"]"
            id="«r6»"
          >
            🌙 Dark mode developer
          </span>
        </label>
      </div>
      <div
        class="mt-4 flex justify-end"
      >
        <button
          aria-label="Submit form"
          class="group tap-highlight-transparent data-[hover=true]:opacity-hover z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-success data-[hover=true]:opacity-hover text-white"
          data-react-aria-pressable="true"
          data-testid="form_submit_button"
          tabindex="0"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;
